# 1password-diagnostic-tools

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
diagnostic-parser/: Cargo.toml  LICENSE  README.md
diagnostic-parser/examples/: bench.rs
diagnostic-parser/src/: error.rs  lib.rs  log_entry.rs  main.rs  model.rs
diagnostic-tui/: .gitignore  Cargo.toml  README.md
diagnostic-tui/src/: app.rs  main.rs  ui.rs
diagnostic-tui/src/app/: clipboard.rs  filters.rs  keys.rs  navigation.rs  state.rs
diagnostic-tui/src/ui/: crashes.rs  helpers.rs  logs.rs  overview.rs  popups.rs
