[package]
name = "diagnostic-parser"
version = "0.1.0"
edition = "2024"
description = "Parser library for 1Password .1pdiagnostics files"
license = "MIT"

[dependencies]
chrono = { workspace = true }
libc = "0.2.182"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[[example]]
name = "bench"
path = "examples/bench.rs"
